ZODB Requires:
~~~~~~~~~~~~~~
- CPSSchemas requires Epoz-0.5.1
New features:
~~~~~~~~~~~~~
- Split off from CPSDocument into a separate package CPSSchemas.
- Select Widget (displays a menu to choose one string)
- CheckBox Widget (displays a checkbox to choose true/false)
- MultiSelect Widget (display a select multiple to choose a list of strings)
- First RTE (Epoz) integration. Only one per page right now. (unstable)
- String/Date/Text widgets has is_required properties
- adding hidden_empty properties 
Bug fixes:
~~~~~~~~~~
- P1 #144: Versioning is not incremental while editing the document
- P1 #158: Edit page of working version after submit/publish doesn't work
- P2 #125: File/Image Widget must be able to not display anything if no file
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- sf code cleaning
- Vocabularies are now used for all "choice" widgets.
- renaming widget properties: 'title' to 'label_edit' and 'title_view' into 'label'
- Use a first version of simple storage adapters.
- Added a notion of dependant fields so that we can compute other fields
  when one is modified. Will be used for file preview/indexing for instance
- All fields can have allow_none now.